# mir-escape-analysis

./: Cargo.toml  rust-toolchain.toml
binaries/: summary_store.tar
checker/: Cargo.toml
checker/src/: abstract_value.rs  block_visitor.rs  body_visitor.rs  call_visitor.rs  callbacks.rs  crate_visitor.rs  main.rs  summaries.rs  utils.rs
escape_analysis/: Cargo.toml
escape_analysis/src/: lib.rs
escape_analysis_derive/: Cargo.toml
escape_analysis_derive/src/: lib.rs
